Fix minor layout issues.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,8 @@ h1, h2, h3, h4, h5, h6 {
 .about-paragraph {
     margin: 0 auto;
     font-size: 16px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .about {
@@ -86,10 +88,18 @@ h1, h2, h3, h4, h5, h6 {
 
 .box-top {
     margin-top: 20px;
+    padding-top: 15px;
 }
 
 .box-bottom {
+    margin-top: 0;
     padding-bottom: 15px;
+}
+
+@media (max-width: 768px) {
+    .box-bottom {
+        margin-top: -1px;
+    }
 }
 
 
@@ -175,7 +185,7 @@ h1, h2, h3, h4, h5, h6 {
     border-right: dotted #000000 thin;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
     .contact-border {
         border-right: none;
         border-bottom: dotted #000000 thin;
